# CMakeList.txt : CMake project for CacheAssn, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CacheAssn")

# Add source to this project's executable.
add_executable (CacheAssn "CacheAssn.cpp" "CacheAssn.h")

# TODO: Add tests and install targets if needed.
